<?xml version="1.0"?>
<package format="2">
  <name>gazebo_sim</name>
  <version>0.0.0</version>
  <description>Robot-agnostic simulated environment in Gazebo</description>

  <maintainer email="robotics@inf.h-brs.de">MAS robotics</maintainer>

  <license>GPLv3</license>

  <author email="aleksandar.mitrevski@h-brs.de">Alex Mitrevski</author>
  <author email="dharmingeo@gmail.com">Dharmin B.</author>
  <author email="sushant.chavan@smail.inf.h-brs.de">Sushant Chavan</author>

  <buildtool_depend>catkin</buildtool_depend>

</package>
